base for account and connect mysql db
