# api/go_load.swagger.json
@@ -251,10 +251,22 @@
     }
   },
   "definitions": {
+    "go_loadAccount": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "accountname": {
+          "type": "string"
+        }
+      }
+    },
     "go_loadCreateAccountRequest": {
       "type": "object",
       "properties": {
-        "username": {
+        "accountname": {
           "type": "string"
         },
         "password": {
@@ -265,7 +277,7 @@
     "go_loadCreateAccountResponse": {
       "type": "object",
       "properties": {
-        "userId": {
+        "accountId": {
           "type": "string",
           "format": "uint64"
         }
@@ -296,7 +308,7 @@
     "go_loadCreateSessionRequest": {
       "type": "object",
       "properties": {
-        "username": {
+        "accountname": {
           "type": "string"
         },
         "password": {
@@ -307,6 +319,9 @@
     "go_loadCreateSessionResponse": {
       "type": "object",
       "properties": {
+        "account": {
+          "$ref": "#/definitions/go_loadAccount"
+        },
         "token": {
           "type": "string"
         }
@@ -344,8 +359,8 @@
           "type": "string",
           "format": "uint64"
         },
-        "ofUser": {
-          "$ref": "#/definitions/go_loadUser"
+        "ofAccount": {
+          "$ref": "#/definitions/go_loadAccount"
         },
         "downloadType": {
           "$ref": "#/definitions/go_loadDownloadType"
@@ -439,18 +454,6 @@
       "properties": {
         "downloadTask": {
           "$ref": "#/definitions/go_loadDownloadTask"
-        }
-      }
-    },
-    "go_loadUser": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "username": {
-          "type": "string"
         }
       }
     },
